<resources>

    <!-- General -->
    <string name="app_name">CarpoolingTec</string>
    <string name="action_settings">Logout</string>
    <string name="action_sort">Filtrar</string>
    <string name="action_profile">Perfil</string>
    <string name="action_Solicitudes">Solicitudes</string>

    <string name="rides_to_tec">Hacia el Tec</string>
    <string name="contacts">Contactos</string>
    <string name="rides_from_tec">Desde el Tec</string>
    <string name="post">Nueva publicación</string>

    <!-- ContactFragment -->
    <string name="error_loading_contacts">Error cargando contactos</string>

    <!-- RidesFragment -->
    <string name="error_loading_rides">Error cargando viajes</string>

    <!-- Ride item layout -->
    <string name="neighborhood">Colonia</string>
    <string name="monday_initial">Lunes</string>
    <string name="tuesday_initial">Martes</string>
    <string name="wednesday_initial">Miercoles</string>
    <string name="thursday_initial">Jueves</string>
    <string name="friday_initial">Viernes</string>
    <string name="saturday_initial">Sabado</string>
    <string name="sunday_initial">Domingo</string>
    <string name="arrival">Entrada %1$s</string>

    <string name="arrival_tec">Llegada al Tec %1$s</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_profile" translatable="false">ProfileActivity</string>

    <!-- Drive item layout -->
    <string name="passenger_picked_up">%1$s te recogerá</string>
    <string name="driver_pick_up">Recoger a %1$s</string>
    <string name="Person">David</string>
    <string name="street" translatable="false">Corintio 3112, Valle Primavera</string>

    <!-- Strings related to login -->
    <string name="ErrorMessage">Favor de Insertar tu Matricula y Contreseña</string>
    <string name="ErrorMessage2">Favor de Poner direccion</string>
    <string name="prompt_student_id">Matricula:</string>
    <string name="prompt_student_name">Nombre:</string>
    <string name="prompt_password">Contraseña</string>
<<<<<<< HEAD
    <string name="prompt_smoke">Fumar</string>
    <string name="prompt_smoke2">Compartir carro con fumadores</string>
    <string name="prompt_gender">Pasajeros</string>
    <string name="prompt_gender2">Con que pasajeros te gustaria compartir el carro</string>
    <string name="prompt_genderH">Hombre</string>
    <string name="prompt_genderM">Mujer</string>
    <string name="prompt_cost">Cobro</string>
    <string name="prompt_cost2">Al ofrecer ride pagarian tu servicio</string>
    <string name="prompt_note">Nota</string>
    <string name="prompt_note2">Escribe algo sobre tí</string>
=======
    <string name="prompt_smoke">Fumar:</string>
    <string name="prompt_smoke2">Compartir carro con fumadores</string>
    <string name="prompt_gender">Pasajeros:</string>
    <string name="prompt_gender2">Con que pasajeros te gustaria compartir el carro</string>
    <string name="prompt_genderH">Hombre:</string>
    <string name="prompt_genderM">Mujer:</string>
    <string name="prompt_cost">Cobro:</string>
    <string name="prompt_cost2">Al ofrecer ride pagarian tu servicio</string>
    <string name="prompt_note">Nota:</string>
    <string name="prompt_note2">Pon una descripcion tuya que la gente leera</string>
>>>>>>> 52902fa30f200a3d988e6b75f8509590f5da5314
    <string name="prompt_save">Guardar Informacion</string>
    <string name="action_sign_in_short">Iniciar sesión</string>

    <!-- ridecard -->
    <string name="Driver">Driver:</string>
    <string name="Passangers">Passangers:</string>
    <string name="Description">Description:</string>
    <string name="Gender">Gender:</string>
    <string name="Gendertext">Both</string>
    <string name="Smoking">Fumar</string>
    <string name="Smokingtext">No</string>

    <string name="hint_origin">Origen</string>
    <string name="hint_destination">Destino</string>
    <string name="hint_seats">Número de asientos</string>
    <string name="hint_price">Precio</string>
    <string name="hint_notes">Notas</string>

    <!-- Contact info -->
    <string name="contact_name">Jorge Gil</string>
    <string name="call">Llamar</string>
    <string name="send_message">Enviar Mensaje</string>
    <string name="add_contact">Agregar Contacto</string>
    <string name="aqui">Aqui</string>

    <string-array name="viaje_spinner">
        <item>Hacia el Tec</item>
        <item>Desde el Tec</item>
    </string-array>
</resources>
