<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
<<<<<<< HEAD
    tools:context="itesm.mx.carpoolingtec.userinfo.PedirInfoActivity">
=======
    tools:context="itesm.mx.carpoolingtec.login.PedirInfo">
>>>>>>> 52902fa30f200a3d988e6b75f8509590f5da5314
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/MatPedirInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:text="@string/prompt_student_id"
<<<<<<< HEAD
            android:textColor="@color/textPrimary"
=======
>>>>>>> 52902fa30f200a3d988e6b75f8509590f5da5314
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/border" />

        <TextView
            android:id="@+id/NomPedirInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="15sp"
<<<<<<< HEAD
            android:textColor="@color/textPrimary"
=======
>>>>>>> 52902fa30f200a3d988e6b75f8509590f5da5314
            android:text="@string/prompt_student_name"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/border" />

<<<<<<< HEAD
        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Telefono"
            android:inputType="phone"
            android:layout_margin="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/border" />

        <RadioGroup
            android:id="@+id/radioGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Hombre"/>

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="Mujer"/>

            </LinearLayout>
        </RadioGroup>

=======
        <fragment
            android:id="@+id/place_autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            />
>>>>>>> 52902fa30f200a3d988e6b75f8509590f5da5314
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/border" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/FumarPedirInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
<<<<<<< HEAD
                android:textColor="@color/textPrimary"
=======
>>>>>>> 52902fa30f200a3d988e6b75f8509590f5da5314
                android:text="@string/prompt_smoke"
                />
            <TextView
                android:id="@+id/FumarDescripcionPedirInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_below="@+id/FumarPedirInfo"
                android:text="@string/prompt_smoke2"/>
            <CheckBox
                android:id="@+id/FumarCheckPedirInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/border" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/GeneroPedirInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
<<<<<<< HEAD
                android:textColor="@color/textPrimary"
=======
>>>>>>> 52902fa30f200a3d988e6b75f8509590f5da5314
                android:text="@string/prompt_gender"
                />
            <TextView
                android:id="@+id/GeneroDescripcionPedirInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_below="@+id/GeneroPedirInfo"
                android:text="@string/prompt_gender2"/>
            <RelativeLayout
                android:id="@+id/HombreRelativePedirInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/GeneroDescripcionPedirInfo">
                <TextView
                    android:id="@+id/HombreDescripcionPedirInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/prompt_genderH"
<<<<<<< HEAD
                    android:textColor="@color/textPrimary"
=======
>>>>>>> 52902fa30f200a3d988e6b75f8509590f5da5314
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"/>
                <CheckBox
                    android:id="@+id/HombreCheckPedirInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
<<<<<<< HEAD
                    android:checked="true"
=======
>>>>>>> 52902fa30f200a3d988e6b75f8509590f5da5314
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/HombreRelativePedirInfo">
                <TextView
                    android:id="@+id/MujerDescripcionPedirInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
<<<<<<< HEAD
                    android:textColor="@color/textPrimary"
=======
>>>>>>> 52902fa30f200a3d988e6b75f8509590f5da5314
                    android:text="@string/prompt_genderM"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"/>
                <CheckBox
                    android:id="@+id/MujerCheckPedirInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
<<<<<<< HEAD
                    android:checked="true"
=======
>>>>>>> 52902fa30f200a3d988e6b75f8509590f5da5314
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"/>

            </RelativeLayout>


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/border" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/CobrarPedirInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/prompt_cost"
<<<<<<< HEAD
                android:textColor="@color/textPrimary"
=======
>>>>>>> 52902fa30f200a3d988e6b75f8509590f5da5314
                />
            <TextView
                android:id="@+id/CobrarDescripcionPedirInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_below="@+id/CobrarPedirInfo"
                android:text="@string/prompt_cost2"/>
            <CheckBox
                android:id="@+id/CobrarCheckPedirInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/border" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/NotaPedirInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
<<<<<<< HEAD
            android:textColor="@color/textPrimary"
=======
>>>>>>> 52902fa30f200a3d988e6b75f8509590f5da5314
            android:text="@string/prompt_note"
            />
        <TextView
            android:id="@+id/NotaDescripcionPedirInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_below="@+id/NotaPedirInfo"
            android:text="@string/prompt_note2"/>
        <EditText
            android:id="@+id/NotaTextoPedirInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/NotaDescripcionPedirInfo"
            android:inputType="textMultiLine"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
<<<<<<< HEAD
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <Button
            android:id="@+id/BottonPedirInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:padding="10dp"
=======
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/BottonPedirInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
>>>>>>> 52902fa30f200a3d988e6b75f8509590f5da5314
            android:text="@string/prompt_save"/>
    </RelativeLayout>

    </LinearLayout>



</ScrollView>
