<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/image_user"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/circleshape"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <ImageButton
                android:id="@+id/button_call"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitCenter"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/ic_call_black_24dp"
                android:background="?android:selectableItemBackground"/>

            <LinearLayout
                android:id="@+id/layout_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@id/image_user"
                android:layout_toStartOf="@id/button_call"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passenger_picked_up"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_arrival"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/arrival_tec" />

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/border"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:text="@string/street"
                android:textColor="@color/textSecondary"
                android:textSize="17sp"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:layout_toStartOf="@+id/button_directions" />

            <ImageButton
                android:id="@+id/button_directions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_alignParentEnd="true"    
                android:layout_alignParentTop="true"
                android:layout_alignBottom="@id/text_destination"
                android:src="@drawable/ic_directions_black_24dp"
                android:background="?android:selectableItemBackground"/>

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
